# models/user_basic.go
@@ -5,7 +5,7 @@ import "gorm.io/gorm"
 type UserBasic struct {
 	gorm.Model
 	Identity string `gorm:"column:identity; type:varchar(36); json:"identity"` // unique identification of the user table
-	Name     string `gorm:"column:name; type:varchar(255); json:"name"`
+	Username string `gorm:"column:username; type:varchar(255); json:"username"`
 	Password string `gorm:"column:password; type:varchar(255); json:"password"`
 	Phone    string `gorm:"column:phone; type:varchar(255); json:"phone"`
 	Mail     string
